# healthcare-nlp

./: .gitignore  README.md  project-outline.md  pyproject.toml  requirements.txt
data/processed/: ade_corpus_v2_classification.csv
data/sample/: public_adr_sample.csv
reports/: ade_corpus_v2_baseline_summary.json  bioclinicalbert_results_summary.json  final_project_report.md  final_project_report_journal.tex  generate_artifacts.py  md_to_latex_journal.py
reports/artifacts/: table_dataset_summary_stats.json  table_discriminative_tfidf_terms.csv  table_model_comparison_full.csv  table_top_terms_adr.csv  table_top_terms_no_adr.csv
src/healthcare_nlp/: __init__.py  cli.py  data.py  dataset_sources.py  evaluation.py  models.py  preprocess.py  reporting.py  transformer_training.py  transformers_stub.py
