[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-nlp-adr"
version = "0.1.0"
description = "ADR classification baseline for healthcare NLP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
  "scipy>=1.12.0",
  "joblib>=1.3.0",
  "imbalanced-learn>=0.12.0",
  "shap>=0.45.0",
  "lime>=0.2.0.1",
  "transformers>=4.40.0",
  "torch>=2.2.0",
  "datasets>=2.19.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
